--- a/5G.ipynb
+++ b/5G.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns #要注意的是一旦导入了seaborn，matplotlib的默认作图风格就会被覆盖成seaborn的格式\n",
+    "import seaborn as sns #Please note that once seaborn is imported, the default plotting style of matplotlib will be overwritten with seaborn's style.\n",
     "\n",
     "import numpy as np"
    ]
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(r'E:\\Project\\train.csv') # 如果用pandas打不开数据，可以使用记事本打开把编码格式改成utf-8另存\n",
+    "data = pd.read_csv(r'E:\\Project\\train.csv') # If you cannot open data using pandas, you can use Notepad to open it, change the encoding format to UTF-8, and then save it again.\n",
     "data.head()"
    ]
   },
@@ -521,10 +521,10 @@
     "print(len(neagtive_))\n",
     "positive = data[data['target']==1.0]\n",
     "print(len(positive))\n",
-    "neagtive = neagtive_.sample(frac=0.015)###减少负样本\n",
+    "neagtive = neagtive_.sample(frac=0.015)###Reduce negative samples\n",
     "print(len(neagtive))\n",
-    "data_set = pd.concat([neagtive, positive], axis=0)#叠加正负样本\n",
-    "data_set = data_set.sample(frac=1)#打乱正负样本"
+    "data_set = pd.concat([neagtive, positive], axis=0)#Combine positive and negative samples\n",
+    "data_set = data_set.sample(frac=1)#Shuffle positive and negative samples"
    ]
   },
   {
@@ -620,7 +620,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7162774247247662\n"
+      "0.7162774247247662#Logistic Regression Model Scores\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8113983370764659\n"
+      "0.8113983370764659#Random Forest Scores\n"
      ]
     }
    ],
@@ -716,7 +716,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7356008983518257\n"
+      "0.7356008983518257#Decision Tree Scores\n"
      ]
     }
    ],
@@ -764,7 +764,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7386778211221106\n"
+      "0.7386778211221106#Linear Discriminant Analysis Scores\n"
      ]
     }
    ],
@@ -812,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6762491260044472\n"
+      "0.6762491260044472#K-Nearest Neighbors Scores\n"
      ]
     }
    ],
@@ -860,7 +860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6517677830689222\n"
+      "0.6517677830689222#Gaussian Naive Bayes Scores\n"
      ]
     }
    ],
@@ -908,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5538447034474291\n"
+      "0.5538447034474291#Support Vector Machine Scores\n"
      ]
     }
    ],
